# Windmill-Game-Engine

./: .editorconfig  .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  compile_shaders.ps1  compile_shaders.sh
windmill/: CMakeLists.txt
windmill/res/shader/: compile.bat  compile.ps1  compile.sh  imgui.frag  shader.frag  shader.vert
windmill/res/shader/glsl/imgui/: vertex.vert
windmill/res/shader/glsl/lambertian/: fragment.frag
windmill/res/shader/hlsl/lambertian/: pixel.hlsl  vertex.hlsl
windmill/src/: wm_defines.h  wm_engine.cpp  wm_engine.h  wm_utility.h
windmill/src/core/: wm_chrono_time_system.cpp  wm_chrono_time_system.h
windmill/src/debug/: wm_stopwatch.cpp  wm_stopwatch.h
windmill/src/debug/log/: wm_base_log_writer.cpp  wm_base_log_writer.h  wm_console_log_writer.cpp  wm_console_log_writer.h  wm_file_log_writer.cpp  wm_file_log_writer.h  wm_log_system.cpp  wm_log_system.h  wm_scoped_time_logger.cpp  wm_scoped_time_logger.h
windmill/src/implementation/audio/: wm_audio_system.cpp  wm_audio_system.h  wm_openal_audio_buffer.cpp  wm_openal_audio_buffer.h  wm_openal_audio_context.cpp  wm_openal_audio_context.h  wm_openal_audio_listener.cpp  wm_openal_audio_listener.h  wm_openal_audio_source.cpp  wm_openal_audio_source.h
windmill/src/implementation/component/audio/: wm_audio_listener_component.cpp  wm_audio_listener_component.h  wm_audio_source_component.cpp  wm_audio_source_component.h
windmill/src/implementation/component/camera/: wm_camera_component.cpp  wm_camera_component.h
windmill/src/implementation/core/: wm_base_system.cpp  wm_base_system.h
windmill/src/implementation/debug/: wm_scoped_time_logger.cpp  wm_scoped_time_logger.h  wm_stopwatch.cpp  wm_stopwatch.h
windmill/src/implementation/event/: wm_event_system.cpp  wm_event_system.h
windmill/src/implementation/log/: wm_base_log_writer.h  wm_console_log_writer.cpp  wm_console_log_writer.h  wm_file_log_writer.cpp  wm_file_log_writer.h  wm_log_system.cpp  wm_log_system.h
windmill/src/implementation/rendering/: wm_gpu_matrices_ubo.h  wm_gpu_vertex.h  wm_opengl_rendering_system.cpp  wm_opengl_rendering_system.h  wm_vulkan_rendering_system.cpp  wm_vulkan_rendering_system.h
windmill/src/implementation/rendering/direct3d11/: wm_direct3d11_rendering_context.cpp  wm_direct3d11_rendering_context.h  wm_direct3d11_rendering_system.cpp  wm_direct3d11_rendering_system.h  wm_dx11_buffer.cpp  wm_dx11_buffer.h  wm_dx11_defines.h  wm_dx11_mesh.cpp  wm_dx11_mesh.h
windmill/src/implementation/rendering/opengl/: wm_gl_buffer.cpp  wm_gl_buffer.h  wm_gl_defines.h  wm_gl_mesh.cpp  wm_gl_mesh.h  wm_opengl_rendering_context.cpp  wm_opengl_rendering_context.h  wm_opengl_rendering_system.cpp  wm_opengl_rendering_system.h
windmill/src/implementation/rendering/vulkan/: wm_vk_buffer.cpp  wm_vk_buffer.h  wm_vk_defines.h  wm_vk_memory_type.cpp  wm_vk_memory_type.h  wm_vk_mesh.cpp  wm_vk_mesh.h  wm_vulkan_rendering_context.cpp  wm_vulkan_rendering_context.h  wm_vulkan_rendering_system.cpp  wm_vulkan_rendering_system.h
windmill/src/implementation/resource/: wm_resource_system.cpp  wm_resource_system.h
windmill/src/implementation/scene/: wm_node.cpp  wm_node.h  wm_simple_scene_system.cpp  wm_simple_scene_system.h  wm_transform.cpp  wm_transform.h
windmill/src/implementation/time/: wm_chrono_time_system.cpp  wm_chrono_time_system.h
windmill/src/implementation/window/: wm_glfw_window.cpp  wm_glfw_window.h  wm_glfw_window_system.cpp  wm_glfw_window_system.h
windmill/src/implementation/window/input/: wm_glfw_window_input_handler.cpp  wm_glfw_window_input_handler.h
windmill/src/interface/: defines.h  engine.cpp  engine.h
windmill/src/interface/audio/: audio_buffer.cpp  audio_buffer.h  audio_context.cpp  audio_context.h  audio_distance_model.h  audio_listener.cpp  audio_listener.h  audio_source.cpp  audio_source.h  audio_source_state.h  audio_system.cpp  audio_system.h
windmill/src/interface/component/: component.cpp  component.h
windmill/src/interface/component/audio/: audio_listener_component.cpp  audio_listener_component.h  audio_source_component.cpp  audio_source_component.h
windmill/src/interface/component/event/: component_event.h  (+5 more)
windmill/src/interface/core/: application.cpp  application.h  base_ptr.h  defines.h  engine.cpp  engine.h  key.h  parameter_container.cpp  parameter_container.h  ptr.h  ptr_meta.h  ptr_view.h  system.cpp  system.h  tag.cpp  tag.h  time_system.cpp  time_system.h  utility.cpp  utility.h  windmill_error.cpp  windmill_error.h
windmill/src/interface/debug/: scoped_time_logger.cpp  scoped_time_logger.h  stopwatch.cpp  stopwatch.h  to_string.h
windmill/src/interface/defines/: code_generation_defines.h  debug_defines.h  general_defines.h  log_defines.h
windmill/src/interface/event/: event.cpp  event.h  event_listener.h  event_listener_base.cpp  event_listener_base.h  event_system.cpp  event_system.h
windmill/src/interface/log/: log_system.cpp  log_system.h  log_writer.cpp  log_writer.h
windmill/src/interface/ptr/: array_allocator.cpp  array_allocator.h  array_allocator_system.cpp  array_allocator_system.h  base_ptr.h  ptr.h  ptr_meta.cpp  ptr_meta.h  ptr_view.h  vector_array.h
windmill/src/interface/rendering/: gpu_buffer.cpp  gpu_buffer.h  gpu_mesh.cpp  gpu_mesh.h  gpu_resource.h  rendering_api.h  rendering_context.cpp  rendering_context.h  rendering_system.cpp  rendering_system.h  usage_frequency.h
windmill/src/interface/resource/: image.cpp  image.h  mesh.cpp  mesh.h  resource_system.cpp  resource_system.h  sound.cpp  sound.h  vertex.cpp  vertex.h
windmill/src/interface/scene/: node.cpp  node.h  scene_system.cpp  scene_system.h  transform.cpp  transform.h
windmill/src/interface/time/: time_system.cpp  time_system.h
windmill/src/interface/window/: cursor_mode.h  cursor_shape.h  standard_cursor_shape.h  video_mode.cpp  video_mode.h  vsync_mode.h  window.h  window_system.cpp  window_system.h  window_system_init.h
windmill/src/window/: wm_glfw_window.cpp  wm_glfw_window.h  wm_glfw_window_system.cpp  wm_glfw_window_system.h
(+82 files in other folders)
